--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
+<!DOCTYPE html>
 <html>
-<head>
-  <script type="text/javascript"
-      src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
-  </script>
-</head>
-<body>
-  <cast-media-player></cast-media-player>
-  <script>
-    cast.framework.CastReceiverContext.getInstance().start();
-  </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Custom Receiver</title>
+    <script src="https://www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <script src="receiver.js"></script>
+  </head>
+  <body>
+    <cast-media-player></cast-media-player>
+  </body>
 </html>
