--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       loadRequestData.media.hlsVideoSegmentFormat = cast.framework.messages.HlsVideoSegmentFormat.FMP4;
       return loadRequestData;
     });
-    context.start();
+
+    let castReceiverOptions = new cast.framework.CastReceiverOptions();
+    castReceiverOptions.useShakaForHls = true;
+    castReceiverOptions.shakaVersion = "4.14.9";
+    
+    context.start(castReceiverOptions);
   </script>
 </body>
 </html>
