--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <script type="text/javascript"
       src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js">
   </script>
+  <!-- Cast Debug Logger -->
+<script src="//www.gstatic.com/cast/sdk/libs/devtools/debug_layer/caf_receiver_logger.js"></script>
 </head>
 <body>
   <cast-media-player></cast-media-player>
@@ -12,7 +14,18 @@
     const playerManager = context.getPlayerManager();
     let castReceiverOptions = new cast.framework.CastReceiverOptions();
     castReceiverOptions.useShakaForHls = true;
+
+    const castDebugLogger = cast.debug.CastDebugLogger.getInstance();
+
+    context.addEventListener(cast.framework.system.EventType.READY, () => {
+      if (!castDebugLogger.debugOverlayElement_) {
+          // Enable debug logger and show a 'DEBUG MODE' overlay at top left corner.
+          castDebugLogger.setEnabled(true);
+      }
+    });
+    
     context.addCustomMessageListener('urn:x-cast:app.ha.custom', (event) => {
+      castDebugLogger.info("MyLog", event);
       const data = event.data;
       if (data.type === 'UPDATE_TITLE') {
         document.getElementById('title').textContent = data.title;
