--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       if (!castDebugLogger.debugOverlayElement_) {
           // Enable debug logger and show a 'DEBUG MODE' overlay at top left corner.
           castDebugLogger.setEnabled(true);
+          castDebugLogger.showDebugLogs(true);
       }
     });
     
