--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     const castDebugLogger = cast.debug.CastDebugLogger.getInstance();
 
-    castDebugLogger.setEnabled(true);
-    castDebugLogger.showDebugLogs(true);
+    // castDebugLogger.setEnabled(true);
+    // castDebugLogger.showDebugLogs(true);
     context.setLoggerLevel(cast.framework.LoggerLevel.DEBUG)
     
     context.addCustomMessageListener('urn:x-cast:app.ha.custom', (event) => {
