--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     const castDebugLogger = cast.debug.CastDebugLogger.getInstance();
 
-    // castDebugLogger.setEnabled(true);
+    castDebugLogger.setEnabled(true);
     // castDebugLogger.showDebugLogs(true);
     context.setLoggerLevel(cast.framework.LoggerLevel.DEBUG)
     
