--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       // write logic to convert language codes here
         castDebugLogger.info("MyLog", "EDIT_AUDIO_TRACKS");
         castDebugLogger.info("MyLog", request);
+        request;
     });
     context.start(castReceiverOptions);
   </script>
